@@ -1,0 +1,8 @@
+// PR c++/58568
+// { dg-do compile { target c++11 } }
+
+template<int> struct A
+{
+  static const int i;
+  template<int N> const int A<N>::i = []{ return 0; }(); // { dg-error "invalid use" }
+};
